trunk/Archive2/99/d2cd7709bad12f/main.cpp
int main()
{
    int FrontStep[12]{
    90,90,90,90,
    35,50,66,81,
    115,122,119,115
    };
    
    
    typedef int *M[100][4];
    M Move[12];
    
    Move[0][0] = &FrontStep;
}
